# googly

./: .gitignore  README.md
backend/: .env.example  AUDIT_SYSTEM_SUMMARY.md  CONFIG.md  DEPLOYMENT_CHECKLIST.md  README.md  SYSTEM_DOCUMENTATION.md  audit_interface.py  audit_logger.py  bucket_manager.py  bucket_store.py  bulk_upload_legal_acts.py  classification_engine.py  cluster_chunk_embeddings.py  clustering_engine.py  confidence_calculator.py  confidence_warning_system.py  config.py  context_retriever.py  create_semantic_buckets.py  db.py  document_processing.py  document_store.py  embedding_service.py  error_logger.py  exceptions.py  fallback_classifier.py  firebase_setup_guide.md  firestore_client.py  firestore_schema.py  gemini_classifier.py  google-cloud-creds.json  legal_models.py  main.py  model_validators.py  models.py  override_manager.py  performance_reporter.py  performance_tracker.py  pyproject.toml  render-start.sh  (+9 more)
backend/ai/: classification_engine.py  fallback_classifier.py  gemini_classifier.py
backend/audit/: audit_interface.py  audit_logger.py  error_logger.py
backend/config/: pyproject.toml  requirements.txt
backend/core/: config.py  main.py  startup.py
backend/docs/: API_DOCUMENTATION.md  CLASSIFICATION_SERVICE_SUMMARY.md  DOCUMENT_PROCESSING_SUMMARY.md  FIREBASE_QUICKSTART.md  RENDER_DEPLOYMENT.md  document-analysis-spec.md
backend/models/: __init__.py  model_validators.py
backend/performance/: middleware.py  performance_reporter.py  performance_tracker.py
backend/processing/: document_processing.py  text_ocr.py  utils.py
(+255 files in other folders)
