[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "firebase-admin>=7.1.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "google-cloud-vision>=3.4.0",
    "pillow>=10.4.0",
    "pdf2image>=1.17.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "google-cloud-firestore>=2.18.0",
    "google-generativeai>=0.8.3",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytesseract>=0.3.10",
    "psutil>=5.9.0",
    "hypercorn>=0.17.3",
]
